# ARES-Talos

./: .gitignore  README.md  pyproject.toml  talos.code-workspace
docs/: bno055.md  chassis-assembly.md  sabertooth.md
docs/architecture/: ares-architecture.excalidraw
firmware/stm32/: README.md
firmware/stm32/talos-pid-init/: .cproject  .mxproject  .project  talos-pid-init.ioc  talos-pid-init.launch
firmware/stm32/talos-pid-init/Core/Inc/: bno055.h  encoder_vel.h  pi_vel.h
firmware/stm32/talos-pid-init/Core/Src/: main.c  stm32f4xx_hal_msp.c
firmware/stm32/talos-pid-init/Debug/: makefile
firmware/stm32/talos-pid-init/Debug/Core/Src/: subdir.mk
firmware/stm32/talos-pid-init/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
utils/: pid-layout.xml  pj_bridge.py
